--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <img src="images/wadi.jpg" alt="Wadi El Rayan">
         <div class="py-2">
         <h3>Wadi El Rayan</h3>
-            <button  class="btn btn-success"><a href="wadi.html">Explore</a></button>
+            <button  class="btn btn-success"><a href="#">Explore</a></button>
           </div>
       </div>
             </div>
